--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="MobService">
+    <wb-module deploy-name="MobService-TRUNK">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="context-root" value="MobService"/>
-        <property name="java-output-path" value="/MobService/target/classes"/>
+        <property name="java-output-path" value="/MobService-TRUNK/target/classes"/>
         <property name="component.exclusion.patterns" value="WEB-INF/lib/tomcat-*.jar"/>
     </wb-module>
 </project-modules>
